# dart-notes-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/ksic/: ksic09.csv  ksic10.csv
src/dart_notes_mcp/: __init__.py  build_meta.py  company_meta.py  config.py  dart_client.py  index_build.py  index_db.py  index_search.py  indexer.py  ksic.py  notes_parser.py  search.py  server.py  topics.py
tests/: test_core.py  test_search_offline.py
